--- a/On The Map/On The Map/Views/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ZUp-cH-aTo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -44,6 +44,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uzA-CA-VOF">
                                                 <rect key="frame" x="106.5" y="90" width="49" height="30"/>
                                                 <state key="normal" title="LOG IN"/>
+                                                <connections>
+                                                    <segue destination="1XB-BM-JKJ" kind="show" id="ScP-lz-NYq"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -61,9 +64,106 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="6Fd-F6-rSh"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="992.79999999999995" y="26.53673163418291"/>
+        </scene>
+        <!--Map-->
+        <scene sceneID="Vqr-oZ-A5S">
+            <objects>
+                <viewController title="Map" id="qVK-PE-AGm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UuN-zB-Wtw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="8Nc-Kp-zHA">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8Nc-Kp-zHA" firstAttribute="leading" secondItem="uo0-nG-4nc" secondAttribute="leading" id="1EB-Zn-Oeu"/>
+                            <constraint firstItem="uo0-nG-4nc" firstAttribute="trailing" secondItem="8Nc-Kp-zHA" secondAttribute="trailing" id="2mA-3k-gRu"/>
+                            <constraint firstItem="uo0-nG-4nc" firstAttribute="bottom" secondItem="8Nc-Kp-zHA" secondAttribute="bottom" id="DKp-hC-Ffd"/>
+                            <constraint firstItem="8Nc-Kp-zHA" firstAttribute="top" secondItem="uo0-nG-4nc" secondAttribute="top" id="L3H-PU-hZE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uo0-nG-4nc"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Map" id="3xr-wD-FA9"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iSy-ZW-g46" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3052" y="-179.46026986506749"/>
+        </scene>
+        <!--Locations-->
+        <scene sceneID="Zjp-nc-eVI">
+            <objects>
+                <tableViewController title="Locations" id="pFa-hk-jMr" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Gw4-Co-ZZZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="26k-OA-Kd1">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="26k-OA-Kd1" id="Xhv-Qx-m9Q">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="pFa-hk-jMr" id="Z5q-gu-dto"/>
+                            <outlet property="delegate" destination="pFa-hk-jMr" id="PEN-On-awM"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Location" id="SuP-i9-anN"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1T4-c9-c1m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3052" y="504.19790104947532"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="4oP-an-Sod">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="1XB-BM-JKJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="tLM-I9-wti">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="qVK-PE-AGm" kind="relationship" relationship="viewControllers" id="EZD-l5-Cp2"/>
+                        <segue destination="pFa-hk-jMr" kind="relationship" relationship="viewControllers" id="nH6-HG-9X9"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="92r-WN-uFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1895.2" y="26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="WhS-7H-TOw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZUp-cH-aTo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ce0-Xn-3ip">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="tUZ-ey-KnV"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KUM-67-VLr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="142" y="27"/>
         </scene>
     </scenes>
 </document>
