--- a/On The Map/On The Map/Views/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Views/Base.lproj/Main.storyboard
@@ -96,7 +96,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iSy-ZW-g46" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3052" y="-179.46026986506749"/>
+            <point key="canvasLocation" x="1583" y="796"/>
         </scene>
         <!--Locations-->
         <scene sceneID="Zjp-nc-eVI">
@@ -126,7 +126,89 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1T4-c9-c1m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3052" y="504.19790104947532"/>
+            <point key="canvasLocation" x="2242" y="796"/>
+        </scene>
+        <!--Add Location-->
+        <scene sceneID="8vv-CF-RyQ">
+            <objects>
+                <viewController title="Add Location" id="vNF-w7-dsG" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eOk-PP-aku">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="lQ0-2b-wgk">
+                                <rect key="frame" x="56.5" y="273.5" width="262.5" height="120"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qMa-VA-win">
+                                        <rect key="frame" x="0.0" y="0.0" width="262.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" returnKeyType="next" textContentType="location"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Link" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lZ9-Wp-V25">
+                                        <rect key="frame" x="0.0" y="45" width="262.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="URL" returnKeyType="done" textContentType="url"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T4h-KD-XnV">
+                                        <rect key="frame" x="85" y="90" width="92" height="30"/>
+                                        <state key="normal" title="Find Location"/>
+                                        <connections>
+                                            <segue destination="cy0-mq-LtN" kind="show" id="tgg-jS-5rg"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="lZ9-Wp-V25" firstAttribute="width" secondItem="qMa-VA-win" secondAttribute="width" id="TXj-xc-FaX"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="lQ0-2b-wgk" firstAttribute="centerX" secondItem="eOk-PP-aku" secondAttribute="centerX" id="8AA-RZ-P3Z"/>
+                            <constraint firstItem="lQ0-2b-wgk" firstAttribute="centerY" secondItem="eOk-PP-aku" secondAttribute="centerY" id="L1b-px-7mA"/>
+                            <constraint firstItem="qMa-VA-win" firstAttribute="width" secondItem="eOk-PP-aku" secondAttribute="width" multiplier="0.7" id="umG-1j-Jaj"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="cTD-BQ-ghO"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wad-m5-vvW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2753" y="27"/>
+        </scene>
+        <!--Add Location-->
+        <scene sceneID="a0C-MF-YvP">
+            <objects>
+                <viewController title="Add Location" id="cy0-mq-LtN" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9xo-U5-0rX">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="4Jl-eb-Agu">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LzC-qy-kCZ">
+                                <rect key="frame" x="56.5" y="617" width="262.5" height="30"/>
+                                <state key="normal" title="FINISH"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="vSc-yj-neP" firstAttribute="bottom" secondItem="LzC-qy-kCZ" secondAttribute="bottom" constant="20" id="EQQ-67-uvk"/>
+                            <constraint firstItem="LzC-qy-kCZ" firstAttribute="centerX" secondItem="vSc-yj-neP" secondAttribute="centerX" id="Ncu-pG-8iz"/>
+                            <constraint firstItem="4Jl-eb-Agu" firstAttribute="leading" secondItem="vSc-yj-neP" secondAttribute="leading" id="PjR-MQ-GcW"/>
+                            <constraint firstItem="vSc-yj-neP" firstAttribute="trailing" secondItem="4Jl-eb-Agu" secondAttribute="trailing" id="ZQT-Ne-wrK"/>
+                            <constraint firstItem="LzC-qy-kCZ" firstAttribute="width" secondItem="vSc-yj-neP" secondAttribute="width" multiplier="0.7" id="saB-cJ-DTg"/>
+                            <constraint firstItem="vSc-yj-neP" firstAttribute="bottom" secondItem="4Jl-eb-Agu" secondAttribute="bottom" id="wxy-NQ-cHM"/>
+                            <constraint firstItem="4Jl-eb-Agu" firstAttribute="top" secondItem="vSc-yj-neP" secondAttribute="top" id="xNa-02-qag"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="vSc-yj-neP"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TBP-2J-Ohg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3583" y="27"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="4oP-an-Sod">
@@ -141,6 +223,7 @@
                     <connections>
                         <segue destination="qVK-PE-AGm" kind="relationship" relationship="viewControllers" id="EZD-l5-Cp2"/>
                         <segue destination="pFa-hk-jMr" kind="relationship" relationship="viewControllers" id="nH6-HG-9X9"/>
+                        <segue destination="vNF-w7-dsG" kind="show" id="8qb-co-vhe"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="92r-WN-uFh" userLabel="First Responder" sceneMemberID="firstResponder"/>
