--- a/On The Map/On The Map/Views/Base.lproj/Main.storyboard
+++ b/On The Map/On The Map/Views/Base.lproj/Main.storyboard
@@ -115,7 +115,7 @@
         <!--Map-->
         <scene sceneID="Vqr-oZ-A5S">
             <objects>
-                <viewController title="Map" id="qVK-PE-AGm" sceneMemberID="viewController">
+                <viewController title="Map" id="qVK-PE-AGm" customClass="LocationsMapViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="UuN-zB-Wtw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -135,6 +135,9 @@
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" id="3xr-wD-FA9"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="mapView" destination="8Nc-Kp-zHA" id="eiS-mY-fyY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iSy-ZW-g46" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -143,7 +146,7 @@
         <!--Locations-->
         <scene sceneID="Zjp-nc-eVI">
             <objects>
-                <tableViewController title="Locations" id="pFa-hk-jMr" sceneMemberID="viewController">
+                <tableViewController title="Locations" id="pFa-hk-jMr" customClass="LocationsTableViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Gw4-Co-ZZZ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -268,12 +271,12 @@
             </objects>
             <point key="canvasLocation" x="1055" y="27"/>
         </scene>
-        <!--Locations Tab Bar Controller-->
+        <!--Map-->
         <scene sceneID="4oP-an-Sod">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="1XB-BM-JKJ" customClass="LocationsTabBarController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController title="Map" automaticallyAdjustsScrollViewInsets="NO" id="1XB-BM-JKJ" customClass="LocationsTabBarController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" id="gAu-fK-MI8">
+                    <navigationItem key="navigationItem" title="Map" id="gAu-fK-MI8">
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="add" id="q3p-Ez-afK">
                             <connections>
                                 <segue destination="vNF-w7-dsG" kind="show" id="fE3-km-72o"/>
